# DataViz

./: DiferençaSiteBlog.py  PredicaoXReal.py  RelacaoBlogSiteTotalUsu.py  UsuarioXsemanas.py  blogsemcopy.csv  correlacao.py  dadosCOM.csv  pyproject.toml  semoutlier.csv  sozero.csv  transacoesBlogSite.py  usuariosXtransaçõesTotais.py
