[tool.poetry]
name = "trabalho2"
version = "0.1.0"
description = ""
authors = ["liviaspereira <liviaspereira@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
